--- a/flex.css
+++ b/flex.css
@@ -9,14 +9,28 @@ body {
   margin: 5px;
   padding: 10px;
   border: 4px solid black;
+
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
   background-color: #81d07d;
-  max-width: 200px;
+  /* max-width: 200px; */
   min-width: 100px;
   height: 200px;
-  margin: 10px 0;
+  margin: 10px;
   padding: 10px;
   border: 2px solid black;
+
+  flex-grow: 1;
+  flex-basis: 200px;
+  /* overflow: clip; */
+}
+
+.bigger {
+  flex-grow: 6;
 }
