--- a/positioning.css
+++ b/positioning.css
@@ -7,6 +7,7 @@ p {
 }
 
 .outer {
+  position: relative;
   width: 400px;
   height: 400px;
   margin: 5px;
@@ -30,4 +31,36 @@ p {
 
 .inner.unpositioned {
   background-color: #ababab;
+}
+
+.static {
+  position: static;
+  top: 50px;
+  left: 100px;
+}
+
+.relative {
+  position: relative;
+  top: 50px;
+  left: 100px;
+  z-index: 1;
+  /* bottom: 50px;
+  right: 100px; */
+}
+
+.absolute {
+  position: absolute;
+  top: 50px;
+  left: 100px;
+  /* top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+}
+
+.fixed {
+  position: fixed;
+  /* top: 50px;
+  left: 100px; */
+  bottom: 50px;
+  right: 100px;
 }
