--- a/responsive.css
+++ b/responsive.css
@@ -38,3 +38,19 @@ header h1 {
 .right {
   float: right;
 }
+
+@media (max-width: 640px) {
+  .navitem {
+    display: block;
+  }
+
+  .navitem.right {
+    float: none;
+  }
+}
+
+@media (max-width: 800px) {
+  header h1 {
+    font-size: 24px;
+  }
+}
